@@ -1,1 +1,5 @@
 # CBC_and_EBC_mode
+-	In order to run the jar executable:
+Open command prompt and locate the file. After that you type this line:
+java -jar --enable-preview activity4.jar
+Then you press the select image button and select image you desire to encrypt (you can type the path if you want). You can press the ECB or CBC encryption buttons to see the encrypted version to the image.
